syntax = "proto3";

option go_package = "github.com/raymundovr/kvstore/grpc";

message GetRequest {
    string key = 1;
}

message GetResponse {
    string key = 1;
    string value = 2;
}

message PutRequest {
    string key = 1;
    string value = 2;
}

message PutResponse {
    string key = 1;
    string value = 2;
}

message DeleteRequest {
    string key = 1;
}

message DeleteResponse {
    string key = 1;
}

service KeyValue {
    rpc Get(GetRequest) returns (GetResponse);
    rpc Put(PutRequest) returns (PutResponse);
    rpc Delete(DeleteRequest) returns (DeleteResponse);
}